@@ -769,6 +769,7 @@ about.text=jEdit is brought to you by\n\
 	Alwyn Barry\n\
 	Amedeo Farello\n\
 	Andre Kaplan\n\
+	Anthony Roy\n\
 	Artur Biesiadowski\n\
 	Aziz Sharif\n\
 	Ben Glazer\n\
@@ -801,7 +802,6 @@ about.text=jEdit is brought to you by\n\
 	Giulio Piancastelli\n\
 	Greg Cooper\n\
 	Greg Merrill\n\
-	Giulio Piancastelli\n\
 	Ian Maclean\n\
 	Israel Olalla\n\
 	Jamie LaScolea\n\
