@@ -2,9 +2,15 @@ JEDIT 4.1 VERSION HISTORY
 
 * Version 4.1pre7
 
-+ Bug Fixes
++ Syntax Highlighting Changes:
+
+- Freemaker syntax highlighting (Jonathan Revusky).
+
++ Bug Fixes:
 
 - The action "Insert Tab and Indent" was broken.
+- Backed out Rex Young's ReadWriteLock.java fix since it caused
+  deadlocks.
 
 * Version 4.1pre6
 
